--- a/install/templates/step2.html.twig
+++ b/install/templates/step2.html.twig
@@ -4,17 +4,36 @@
 {% endblock %}
 
 {% block content %}
-    <p>{% trans %}This installer expects you to have a PowerDNS database accessible from this server. This installer also expects you to have never ran Poweradmin before, or that you want to overwrite the Poweradmin part of the database. If you have had Poweradmin running before, any data in the following tables will be destroyed: perm_items, perm_templ, perm_templ_items, users and zones. This installer will, of course, not touch the data in the PowerDNS tables of the database. However, it is recommended that you create a backup of your database before proceeding.{% endtrans %}</p>
-    <p>{% trans %}The alternative for this installer is a manual installation. Refer to the poweradmin.org website if you want to go down that road.{% endtrans %}</p>
-    <p>{% trans %}Finally, if you see any errors during the installation process, a problem report would be appreciated. You can report problems (and ask for help) on the
-            <a href="https://github.com/poweradmin/poweradmin/issues" target="_blank">poweradmin</a> issues.{% endtrans %}</p>
-    <p>{% trans %}Do you want to proceed now?{% endtrans %}</p>
+    <div class="card">
+        <div class="card-header bg-primary text-white">
+            <h5 class="mb-0">{% trans %}Getting Ready for Installation{% endtrans %}</h5>
+        </div>
+        <div class="card-body">
+            <div class="alert alert-info">
+                <h5>{% trans %}Before you continue{% endtrans %}</h5>
+                <p>{% trans %}This installer expects you to have a PowerDNS database accessible from this server. This installer also expects you to have never ran Poweradmin before, or that you want to overwrite the Poweradmin part of the database.{% endtrans %}</p>
+            </div>
 
-    <form method="post">
-        <input type="hidden" name="install_token" value="{{ install_token }}">
-        <input type="hidden" name="language" value="{{ language }}">
-        <input type="hidden" name="step" value="{{ next_step }}">
-        <input type="submit" name="submit" class="btn btn-primary btn-sm"
-               value="{% trans %}Go to step{% endtrans %} {{ next_step }}">
-    </form>
+            <div class="alert alert-warning">
+                <h5>{% trans %}Important{% endtrans %}</h5>
+                <p>{% trans %}If you have had Poweradmin running before, any data in the following tables will be destroyed: perm_items, perm_templ, perm_templ_items, users and zones. This installer will, of course, not touch the data in the PowerDNS tables of the database.{% endtrans %}</p>
+                <p><strong>{% trans %}It is recommended that you create a backup of your database before proceeding.{% endtrans %}</strong></p>
+            </div>
+
+            <p>{% trans %}The alternative for this installer is a manual installation. Refer to the poweradmin.org website if you want to go down that road.{% endtrans %}</p>
+            <p>{% trans %}Finally, if you see any errors during the installation process, a problem report would be appreciated. You can report problems (and ask for help) on the
+                    <a href="https://github.com/poweradmin/poweradmin/issues" target="_blank">poweradmin</a> issues.{% endtrans %}</p>
+
+            <div class="mt-4">
+                <p class="lead">{% trans %}Do you want to proceed now?{% endtrans %}</p>
+                <form method="post">
+                    <input type="hidden" name="install_token" value="{{ install_token }}">
+                    <input type="hidden" name="language" value="{{ language }}">
+                    <input type="hidden" name="step" value="{{ next_step }}">
+                    <input type="submit" name="submit" class="btn btn-primary"
+                           value="{% trans %}Go to step{% endtrans %} {{ next_step }}">
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
