--- a/install/templates/step3.html.twig
+++ b/install/templates/step3.html.twig
@@ -5,121 +5,171 @@
 {% endblock %}
 
 {% block content %}
-    <p>{% trans %}To prepare the database for using Poweradmin, the installer needs to modify the PowerDNS database. It will
-        add a number of tables and it will fill these tables with some data. If the tables are already present, the
-        installer will drop them first.{% endtrans %}</p>
+    <div class="card">
+        <div class="card-header bg-primary text-white">
+            <h5 class="mb-0">{% trans %}Configure Database Connection{% endtrans %}</h5>
+        </div>
+        <div class="card-body">
+            <div class="alert alert-info mb-4">
+                <h5>{% trans %}Database Preparation{% endtrans %}</h5>
+                <p>{% trans %}To prepare the database for using Poweradmin, the installer needs to modify the PowerDNS database. It will
+                    add a number of tables and it will fill these tables with some data. If the tables are already present, the
+                    installer will drop them first.{% endtrans %}</p>
+                <p class="mb-0">{% trans %}To do all of this, the installer needs to access the database with an account which has sufficient rights.
+                    If you trust the installer, you may give it the username and password of the database user root. Otherwise, make
+                    sure the user has enough rights, before actually proceeding.{% endtrans %}</p>
+            </div>
 
-    <p>{% trans %}To do all of this, the installer needs to access the database with an account which has sufficient rights.
-        If you trust the installer, you may give it the username and password of the database user root. Otherwise, make
-        sure the user has enough rights, before actually proceeding.{% endtrans %}</p>
-    <hr>
+            <form class="needs-validation" method="post" novalidate>
+                <input type="hidden" name="install_token" value="{{ install_token }}">
 
-    <form class="needs-validation" method="post" novalidate>
-        <input type="hidden" name="install_token" value="{{ install_token }}">
-        <table class="table table-sm">
-            <tbody>
-            <tr>
-                <td class="col-md-2">{% trans %}Database type{% endtrans %}</td>
-                <td>
-                    <select id="db_type" class="form-select form-select-sm" name="db_type" onChange="updateFormFields(this.value)">
-                        <option value="mysql" {% if db_type == 'mysql' %}selected{% endif %}>MySQL</option>
-                        <option value="pgsql" {% if db_type == 'pgsql' %}selected{% endif %}>PostgreSQL</option>
-                        <option value="sqlite" {% if db_type == 'sqlite' %}selected{% endif %}>SQLite</option>
-                    </select>
-                </td>
-                <td>
-                    <label for="db_type">{% trans %}The type of the PowerDNS database.{% endtrans %}</label>
-                </td>
-            </tr>
-            <tr id="username_row">
-                <td>{% trans %}Username{% endtrans %}</td>
-                <td>
-                    <input id="username" class="form-control form-control-sm" type="text" name="db_user" value="{{ db_user }}" required>
-                    <div class="invalid-feedback">{% trans %}Provide the user name{% endtrans %}</div>
-                </td>
-                <td>{% trans %}The username to use to connect to the database, make sure the username has
-                    sufficient rights to perform administrative task to the PowerDNS database (the installer wants to drop,
-                    create and fill tables to the database).{% endtrans %}
-                </td>
-            </tr>
-            <tr id="password_row">
-                <td>{% trans %}Password{% endtrans %}</td>
-                <td>
-                    <div class="input-group">
-                        <input class="form-control form-control-sm" type="password" id="userpass" name="db_pass" value="{{ db_pass }}" autocomplete="off" required>
-                        <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('userpass', 'eye1')"><i class="bi bi-eye-fill" id="eye1"></i></button>
-                        <div class="invalid-feedback">{% trans %}Provide user password{% endtrans %}</div>
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <h5 class="mb-0">{% trans %}Database Settings{% endtrans %}</h5>
                     </div>
-                </td>
-                <td>{% trans %}The password for this username.{% endtrans %}</td>
-            </tr>
-            <tr id="db_hostname_row">
-                <td>{% trans %}Hostname{% endtrans %}</td>
-                <td>
-                    <input class="form-control form-control-sm" type="text" id="host" name="db_host" value="{{ db_host|default('localhost') }}" required>
-                    <div class="invalid-feedback">{% trans %}Provide the hostname{% endtrans %}</div>
-                </td>
-                <td>{% trans %}The hostname on which the PowerDNS database resides. Frequently, this will be "localhost".{% endtrans %}
-                </td>
-            </tr>
-            <tr id="db_port_row">
-                <td>{% trans %}DB Port{% endtrans %}</td>
-                <td>
-                    <input class="form-control form-control-sm" type="text" id="db_port" name="db_port" value="{{ db_port|default('3306') }}" required>
-                    <div class="invalid-feedback">{% trans %}Provide database port{% endtrans %}</div>
-                </td>
-                <td>{% trans %}The port the database server is listening on.{% endtrans %}</td>
-            </tr>
-            <tr>
-                <td>{% trans %}Database{% endtrans %}</td>
-                <td class="w-25">
-                    <input class="form-control form-control-sm" type="text" name="db_name" value="{{ db_name }}" required>
-                    <div class="invalid-feedback">{% trans %}Provide the name of the database{% endtrans %}</div>
-                </td>
-                <td><span id="db_name_title">{% trans %}The name of the PowerDNS database.{% endtrans %}</span>
-                    <span id="db_path_title" style="display: none;">{% trans %}The path and filename to the PowerDNS SQLite database.{% endtrans %}</span>
-                </td>
-            </tr>
-            <tr id="db_charset_row">
-                <td>{% trans %}DB charset{% endtrans %}</td>
-                <td>
-                    <select class="form-select form-select-sm" name="db_charset">
-                        <option value="">{% trans %}Use default{% endtrans %}</option>
-                    </select>
-                </td>
-                <td>{% trans %}The charset (encoding) which will be used for new tables. Leave it empty then default database charset will be used.{% endtrans %}</td>
-            </tr>
-            <tr id="db_collation_row">
-                <td>{% trans %}DB collation{% endtrans %}</td>
-                <td>
-                    <select class="form-select form-select-sm" name="db_collation">
-                        <option value="">{% trans %}Use default{% endtrans %}</option>
-                    </select>
-                </td>
-                <td>{% trans %}Set of rules for comparing characters in database. Leave it empty then default database collation will be used.{% endtrans %}</td>
-            </tr>
-            <tr>
-                <td>{% trans %}Poweradmin administrator password{% endtrans %}</td>
-                <td>
-                    <div class="input-group">
-                        <input class="form-control form-control-sm" type="password" id="pa_pass" name="pa_pass" value="{{ pa_pass }}" autocomplete="off" required>
-                        <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('pa_pass', 'eye2')"><i class="bi bi-eye-fill" id="eye2"></i></button>
-                        <div class="invalid-feedback">{% trans %}Provide a password{% endtrans %}</div>
+                    <div class="card-body">
+                        <div class="row mb-3">
+                            <label for="db_type" class="col-md-3 col-form-label">{% trans %}Database type{% endtrans %}</label>
+                            <div class="col-md-4">
+                                <select id="db_type" class="form-select" name="db_type" onChange="updateFormFields(this.value)">
+                                    <option value="mysql" {% if db_type == 'mysql' %}selected{% endif %}>MySQL</option>
+                                    <option value="pgsql" {% if db_type == 'pgsql' %}selected{% endif %}>PostgreSQL</option>
+                                    <option value="sqlite" {% if db_type == 'sqlite' %}selected{% endif %}>SQLite</option>
+                                </select>
+                            </div>
+                            <div class="col-md-5">
+                                <span class="form-text">{% trans %}The type of the PowerDNS database.{% endtrans %}</span>
+                            </div>
+                        </div>
+
+                        <div class="row mb-3" id="username_row">
+                            <label for="username" class="col-md-3 col-form-label">{% trans %}Username{% endtrans %}</label>
+                            <div class="col-md-4">
+                                <input id="username" class="form-control" type="text" name="db_user" value="{{ db_user }}" required>
+                                <div class="invalid-feedback">{% trans %}Provide the user name{% endtrans %}</div>
+                            </div>
+                            <div class="col-md-5">
+                                <span class="form-text">{% trans %}The username to use to connect to the database with sufficient rights to perform administrative tasks.{% endtrans %}</span>
+                            </div>
+                        </div>
+
+                        <div class="row mb-3" id="password_row">
+                            <label for="userpass" class="col-md-3 col-form-label">{% trans %}Password{% endtrans %}</label>
+                            <div class="col-md-4">
+                                <div class="input-group">
+                                    <input class="form-control" type="password" id="userpass" name="db_pass" value="{{ db_pass }}" autocomplete="off" required>
+                                    <button class="btn btn-outline-secondary" type="button" onclick="showPassword('userpass', 'eye1')"><i class="bi bi-eye-fill" id="eye1"></i></button>
+                                    <div class="invalid-feedback">{% trans %}Provide user password{% endtrans %}</div>
+                                </div>
+                            </div>
+                            <div class="col-md-5">
+                                <span class="form-text">{% trans %}The password for this username.{% endtrans %}</span>
+                            </div>
+                        </div>
+
+                        <div class="row mb-3" id="db_hostname_row">
+                            <label for="host" class="col-md-3 col-form-label">{% trans %}Hostname{% endtrans %}</label>
+                            <div class="col-md-4">
+                                <input class="form-control" type="text" id="host" name="db_host" value="{{ db_host|default('localhost') }}" required>
+                                <div class="invalid-feedback">{% trans %}Provide the hostname{% endtrans %}</div>
+                            </div>
+                            <div class="col-md-5">
+                                <span class="form-text">{% trans %}The hostname on which the PowerDNS database resides. Frequently, this will be "localhost".{% endtrans %}</span>
+                            </div>
+                        </div>
+
+                        <div class="row mb-3" id="db_port_row">
+                            <label for="db_port" class="col-md-3 col-form-label">{% trans %}DB Port{% endtrans %}</label>
+                            <div class="col-md-4">
+                                <input class="form-control" type="text" id="db_port" name="db_port" value="{{ db_port|default('3306') }}" required>
+                                <div class="invalid-feedback">{% trans %}Provide database port{% endtrans %}</div>
+                            </div>
+                            <div class="col-md-5">
+                                <span class="form-text">{% trans %}The port the database server is listening on.{% endtrans %}</span>
+                            </div>
+                        </div>
+
+                        <div class="row mb-3">
+                            <label for="db_name" class="col-md-3 col-form-label">{% trans %}Database{% endtrans %}</label>
+                            <div class="col-md-4">
+                                <input class="form-control" type="text" id="db_name" name="db_name" value="{{ db_name }}" required>
+                                <div class="invalid-feedback">{% trans %}Provide the name of the database{% endtrans %}</div>
+                            </div>
+                            <div class="col-md-5">
+                                <span class="form-text" id="db_name_title">{% trans %}The name of the PowerDNS database.{% endtrans %}</span>
+                                <span class="form-text" id="db_path_title" style="display: none;">{% trans %}The path and filename to the PowerDNS SQLite database.{% endtrans %}</span>
+                            </div>
+                        </div>
+
+                        <div class="row mb-3" id="db_charset_row">
+                            <label for="db_charset" class="col-md-3 col-form-label">{% trans %}DB charset{% endtrans %}</label>
+                            <div class="col-md-4">
+                                <select class="form-select" id="db_charset" name="db_charset">
+                                    <option value="">{% trans %}Use default{% endtrans %}</option>
+                                </select>
+                            </div>
+                            <div class="col-md-5">
+                                <span class="form-text">{% trans %}The charset (encoding) which will be used for new tables. Leave it empty then default database charset will be used.{% endtrans %}</span>
+                            </div>
+                        </div>
+
+                        <div class="row mb-3" id="db_collation_row">
+                            <label for="db_collation" class="col-md-3 col-form-label">{% trans %}DB collation{% endtrans %}</label>
+                            <div class="col-md-4">
+                                <select class="form-select" id="db_collation" name="db_collation">
+                                    <option value="">{% trans %}Use default{% endtrans %}</option>
+                                </select>
+                            </div>
+                            <div class="col-md-5">
+                                <span class="form-text">{% trans %}Set of rules for comparing characters in database. Leave it empty then default database collation will be used.{% endtrans %}</span>
+                            </div>
+                        </div>
                     </div>
-                </td>
-                <td>
-                    {% trans %}The password of the Poweradmin administrator. This administrator has full rights to Poweradmin using the web interface.{% endtrans %}
-                    {% trans %}Password must be at least 6 characters long, contain at least one uppercase letter, one lowercase letter, and one number.{% endtrans %}
-                    {% trans %}The default username is "admin".{% endtrans %}
-                </td>
-            </tr>
-            <tbody>
-        </table>
-        <br>
-        <input type="hidden" name="step" value="{{ next_step }}">
-        <input type="hidden" name="language" value="{{ language }}">
-        <input type="submit" name="submit" class="btn btn-primary btn-sm" value="{% trans %}Go to step{% endtrans %} {{ next_step }}">
-    </form>
+                </div>
+
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <h5 class="mb-0">{% trans %}Administrator Account{% endtrans %}</h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="row mb-3">
+                            <label for="pa_pass" class="col-md-3 col-form-label">{% trans %}Administrator password{% endtrans %}</label>
+                            <div class="col-md-4">
+                                <div class="input-group">
+                                    <input class="form-control" type="password" id="pa_pass" name="pa_pass" value="{{ pa_pass }}" autocomplete="off" required>
+                                    <button class="btn btn-outline-secondary" type="button" onclick="showPassword('pa_pass', 'eye2')"><i class="bi bi-eye-fill" id="eye2"></i></button>
+                                    <div class="invalid-feedback">{% trans %}Provide a password{% endtrans %}</div>
+                                </div>
+                            </div>
+                            <div class="col-md-5">
+                                <div class="form-text">
+                                    {% trans %}The password of the Poweradmin administrator. This administrator has full rights to Poweradmin using the web interface.{% endtrans %}
+                                    <div class="mt-2">
+                                        <strong>{% trans %}Requirements:{% endtrans %}</strong>
+                                        <ul class="mb-0">
+                                            <li>{% trans %}At least 6 characters long{% endtrans %}</li>
+                                            <li>{% trans %}At least one uppercase letter{% endtrans %}</li>
+                                            <li>{% trans %}At least one lowercase letter{% endtrans %}</li>
+                                            <li>{% trans %}At least one number{% endtrans %}</li>
+                                        </ul>
+                                    </div>
+                                    <div class="mt-2">
+                                        {% trans %}The default username is "admin".{% endtrans %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="mt-4">
+                    <input type="hidden" name="step" value="{{ next_step }}">
+                    <input type="hidden" name="language" value="{{ language }}">
+                    <input type="submit" name="submit" class="btn btn-primary" value="{% trans %}Go to step{% endtrans %} {{ next_step }}">
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
 
 {% block javascripts %}
