--- a/install/templates/step7.html.twig
+++ b/install/templates/step7.html.twig
@@ -1,31 +1,34 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
-    {% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Installation complete{% endtrans %}
-{% endblock %}
-
 {% block content %}
-    <div class="alert alert-success">
-        <h4>{% trans %}Installation Complete!{% endtrans %}</h4>
-        <p>{% trans %}Congratulations! Your Poweradmin installation is now configured.{% endtrans %}</p>
-    </div>
-
-    <div class="alert alert-warning">
-        <h5>{% trans %}Important Security Notice{% endtrans %}</h5>
-        <p><strong>{% trans %}You must remove the "install/" directory from the Poweradmin root directory.{% endtrans %}</strong></p>
-        <p>{% trans %}Poweradmin will not function if the install directory exists, as a security measure.{% endtrans %}</p>
-    </div>
-
-    <div class="card mt-4">
+    <div class="card">
         <div class="card-header bg-primary text-white">
-            <h5 class="mb-0">{% trans %}Next Steps{% endtrans %}</h5>
+            <h5 class="mb-0">{% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Installation complete{% endtrans %}</h5>
         </div>
         <div class="card-body">
-            <ol>
-                <li>{% trans %}Remove the "install/" directory from your server{% endtrans %}</li>
-                <li>{% trans %}Login to <a href="../index.php">Poweradmin</a> using the default username "admin" and the password you set in step 3{% endtrans %}</li>
-                <li>{% trans %}Begin configuring your DNS zones and records{% endtrans %}</li>
-            </ol>
+            <div class="alert alert-success">
+                <h4>{% trans %}Installation Complete!{% endtrans %}</h4>
+                <p>{% trans %}Congratulations! Your Poweradmin installation is now configured.{% endtrans %}</p>
+            </div>
+
+            <div class="alert alert-warning">
+                <h5>{% trans %}Important Security Notice{% endtrans %}</h5>
+                <p><strong>{% trans %}You must remove the "install/" directory from the Poweradmin root directory.{% endtrans %}</strong></p>
+                <p>{% trans %}Poweradmin will not function if the install directory exists, as a security measure.{% endtrans %}</p>
+            </div>
+
+            <div class="card mt-4">
+                <div class="card-header bg-primary text-white">
+                    <h5 class="mb-0">{% trans %}Next Steps{% endtrans %}</h5>
+                </div>
+                <div class="card-body">
+                    <ol>
+                        <li>{% trans %}Remove the "install/" directory from your server{% endtrans %}</li>
+                        <li>{% trans %}Login to <a href="../index.php">Poweradmin</a> using the default username "admin" and the password you set in step 3{% endtrans %}</li>
+                        <li>{% trans %}Begin configuring your DNS zones and records{% endtrans %}</li>
+                    </ol>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
