--- a/install/templates/step2.html.twig
+++ b/install/templates/step2.html.twig
@@ -1,12 +1,9 @@
 {% extends 'base.html.twig' %}
-{% block title %}
-    {% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Getting ready for installation{% endtrans %}
-{% endblock %}
 
 {% block content %}
     <div class="card">
         <div class="card-header bg-primary text-white">
-            <h5 class="mb-0">{% trans %}Getting Ready for Installation{% endtrans %}</h5>
+            <h5 class="mb-0">{% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Getting ready for installation{% endtrans %}</h5>
         </div>
         <div class="card-body">
             <div class="alert alert-info">
