--- a/install/templates/step5.html.twig
+++ b/install/templates/step5.html.twig
@@ -1,13 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
-    {% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Create limited-rights user{% endtrans %}
-{% endblock %}
-
 {% block content %}
     <div class="card">
         <div class="card-header bg-primary text-white">
-            <h5 class="mb-0">{% trans %}Database User Setup{% endtrans %}</h5>
+            <h5 class="mb-0">{% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Create limited-rights user{% endtrans %}</h5>
         </div>
         <div class="card-body">
             {% if db_type != 'sqlite' %}
