feat(dns): implement standalone batch PTR record management

--- a/templates/header.html
+++ b/templates/header.html
@@ -55,6 +55,11 @@
                                href="index.php?page=bulk_registration">{% trans %}Bulk registration{% endtrans %}</a>
                         </li>
                         {% endif %}
+                        {% if iface_add_reverse_record and (perm_zone_master_add or perm_zone_slave_add) %}
+                        <li><a class="dropdown-item"
+                               href="index.php?page=batch_ptr_record">{% trans %}Batch PTR Records{% endtrans %}</a>
+                        </li>
+                        {% endif %}
                         {% if perm_is_godlike and dblog_use == true %}
                         <li>
                             <hr class="dropdown-divider">
