--- a/templates/batch_ptr_record.html
+++ b/templates/batch_ptr_record.html
@@ -2,6 +2,7 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="index.php?page=list_zones">{% trans %}Zones{% endtrans %}</a></li>
+        {% if has_zone_id %}
         <li class="breadcrumb-item">
             {% if idn_zone_name %}
             <a href="index.php?page=edit&id={{ zone_id }}">{{ idn_zone_name }}</a>
@@ -9,6 +10,7 @@
             <a href="index.php?page=edit&id={{ zone_id }}">{{ zone_name }}</a>
             {% endif %}
         </li>
+        {% endif %}
         <li class="breadcrumb-item" aria-current="page">{% trans %}Batch PTR Records{% endtrans %}</li>
     </ol>
 </nav>
@@ -19,12 +21,12 @@
 
 <div class="card">
     <div class="card-header">
-        <h4>{{ 'Batch PTR Records'|trans }}</h4>
+        <strong>{{ 'Batch PTR Records'|trans }}</strong>
     </div>
     <div class="card-body">
         <p>{{ 'Create multiple PTR (reverse DNS) records at once for an IP range'|trans }}</p>
 
-        <form class="needs-validation" method="post" action="index.php?page=batch_ptr_record&id={{ zone_id }}" novalidate>
+        <form class="needs-validation" method="post" action="index.php?page=batch_ptr_record{% if has_zone_id %}&id={{ zone_id }}{% endif %}" novalidate>
             <input type="hidden" name="_token" value="{{ csrf_token }}">
 
             <div class="form-group mb-3">
@@ -92,7 +94,11 @@
 
             <div class="mb-3">
                 <button type="submit" class="btn btn-primary">{{ 'Create PTR Records'|trans }}</button>
+                {% if has_zone_id %}
                 <a href="index.php?page=edit&id={{ zone_id }}" class="btn btn-secondary">{{ 'Cancel'|trans }}</a>
+                {% else %}
+                <a href="index.php" class="btn btn-secondary">{{ 'Cancel'|trans }}</a>
+                {% endif %}
             </div>
         </form>
     </div>
